--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <a class="link link--nav" href="#skills">Skills</a>
           </li>
           <li class="nav__list-item">
+            <a class="link link--nav" href="#hobby">Hobby</a>
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#contact">Contact</a>
           </li>
         </ul>
@@ -159,22 +162,22 @@
         <div class="projects__grid">
           
           <div class="project">
-            <h3>Master Thesis</h3>        
-            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/logoSA.png">            
+            <h3>IaC Defect Prediction</h3>        
+            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/lenteBug2.png">            
             <ul class="project__stack">
               <li class="project__stack-item">Master Thesis</li>
               <li class="project__stack-item"> Oct 2023</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/GerardoIuliano/IaC_defect_prediction_using_pdg_metrics"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="project.html"
+              href="#"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -186,7 +189,7 @@
             <h3>SalernoAmica</h3>        
             <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/logoSA.png">            
             <ul class="project__stack">
-              <li class="project__stack-item">Cross Platform Apllication</li>
+              <li class="project__stack-item">Cross Platform Application</li>
               <li class="project__stack-item">Feb 2023</li>
             </ul>
 
@@ -382,7 +385,32 @@
           
           <div class="project">
             <h3>Master Thesis</h3>        
-            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/logoSA.png">            
+            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/darts.png">            
+            <ul class="project__stack">
+              <li class="project__stack-item">Master Thesis</li>
+              <li class="project__stack-item">Oct 2023</li>
+            </ul>
+
+            <a
+              href="#"
+              aria-label="source code"
+              class="link link--icon"
+              onclick="nextImage()"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="project.html"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="project">
+            <h3>Master Thesis</h3>        
+            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/darts.png">            
             <ul class="project__stack">
               <li class="project__stack-item">Master Thesis</li>
               <li class="project__stack-item">Oct 2023</li>
@@ -406,31 +434,7 @@
 
           <div class="project">
             <h3>Master Thesis</h3>        
-            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/logoSA.png">            
-            <ul class="project__stack">
-              <li class="project__stack-item">Master Thesis</li>
-              <li class="project__stack-item">Oct 2023</li>
-            </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="project.html"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-
-          <div class="project">
-            <h3>Master Thesis</h3>        
-            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/logoSA.png">            
+            <img style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;" src="assets/img/darts.png">            
             <ul class="project__stack">
               <li class="project__stack-item">Master Thesis</li>
               <li class="project__stack-item">Oct 2023</li>
