--- a/compiler.html
+++ b/compiler.html
@@ -94,10 +94,10 @@
                 <strong>Goal of the project</strong>: develop the front-end of the compiler
                 </br>Some info
               <ul>
-                <li><a href="assets/pdf/Specifiche%20lessicali.pdf" target="_blank"> <strong>Lexical info</strong> </a></li>
-                <li><a href="assets/pdf/Specifiche%20syntax%20tree%20MyFun.pdf" target="_blank"> <strong>Syntax Tree info</strong> </a></li>
-                <li><a href="assets/pdf/Scope%20e%20Typing.pdf" target="_blank"> <strong>Scope and Typing info</strong> </a></li>
-                <li><a href="assets/pdf/Inference%20Rules.pdf" target="_blank"> <strong>Inference Rules info</strong> </a></li>
+                <li><a href="assets/pdf/Specifiche%20lessicali.pdf" target="_blank"> <strong><u>Lexical info</u></strong> </a></li>
+                <li><a href="assets/pdf/Specifiche%20syntax%20tree%20MyFun.pdf" target="_blank"> <strong><u>Syntax Tree info</u></strong> </a></li>
+                <li><a href="assets/pdf/Scope%20e%20Typing.pdf" target="_blank"> <strong><u>Scope and Typing info</u></strong> </a></li>
+                <li><a href="assets/pdf/Inference%20Rules.pdf" target="_blank"> <strong><u>Inference Rules info</u></strong> </a></li>
               </ul>
               </p>
             </div>
@@ -109,7 +109,7 @@
                 <li><strong>Category</strong>: Front-end Compiler</li>
                 <li><strong>Client</strong>: University</li>
                 <li><strong>Project date</strong>: Gen 2022</li>
-                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/Compiler"><strong>GitHub</strong>: github.com/GerardoIuliano/Compiler </a></li>
+                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/Compiler"><strong>GitHub</strong>: <u>github.com/GerardoIuliano/Compiler </u></a></li>
               </ul>
             </div>
           </div>
@@ -131,10 +131,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/cleanfolio-minimal"
+        href="#"
         class="link footer__link"
       >
-        Created By Ctrl C & Ctrl V
+        I hereby consent to the processing of the data I provided in this Portfolio.
       </a>
     </footer>
 
