--- a/corallosmart.html
+++ b/corallosmart.html
@@ -115,7 +115,7 @@
                 <li><strong>Category</strong>: Web Application</li>
                 <li><strong>Client</strong>: University</li>
                 <li><strong>Project date</strong>: 17 Gen, 2023</li>
-                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/CoralloSmart"><strong>GitHub</strong>: github.com/GerardoIuliano/CoralloSmart </a></li>
+                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/CoralloSmart"><strong>GitHub</strong>: <u>github.com/GerardoIuliano/CoralloSmart</u> </a></li>
               </ul>
             </div>
           </div>
@@ -150,10 +150,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/cleanfolio-minimal"
+        href="#"
         class="link footer__link"
       >
-        Created By Ctrl C & Ctrl V
+        I hereby consent to the processing of the data I provided in this Portfolio.
       </a>
     </footer>
 
