--- a/dart.html
+++ b/dart.html
@@ -84,7 +84,7 @@
                 <li><strong>Category</strong>: IntelliJ Plug-in</li>
                 <li><strong>Client</strong>: University</li>
                 <li><strong>Project date</strong>: June 2022</li>
-                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/DARTS"><strong>GitHub</strong>: github.com/GerardoIuliano/DARTS </a></li>
+                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/DARTS"><strong>GitHub</strong>: <u>github.com/GerardoIuliano/DARTS</u> </a></li>
                 <li> <a class="nav-link scrollto" href="assets/pdf/DARTS_Paper.pdf" target="_blank"><strong>Paper</strong>: <u>link</u> </a></li>
 
               </ul>
@@ -107,10 +107,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/cleanfolio-minimal"
+        href="#"
         class="link footer__link"
       >
-        Created By Ctrl C & Ctrl V
+        I hereby consent to the processing of the data I provided in this Portfolio.
       </a>
     </footer>
 
