--- a/iacDefectPrediction.html
+++ b/iacDefectPrediction.html
@@ -113,7 +113,7 @@
                 <li><strong>Category</strong>: Defect Prediction Pipeline</li>
                 <li><strong>Client</strong>: University</li>
                 <li><strong>Project date</strong>: March-September 2023</li>
-                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/IaC_defect_prediction_using_pdg_metrics"><strong>GitHub</strong>: github.com/GerardoIuliano/IaC_defect_prediction_using_pdg_metrics </a></li>
+                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/IaC_defect_prediction_using_pdg_metrics"><strong>GitHub</strong>: <u>github.com/GerardoIuliano/IaC_defect_prediction_using_pdg_metrics</u> </a></li>
                 <li> <a class="nav-link scrollto" href="assets/pdf/RegistredReport_IacDP.pdf" target="_blank"><strong>Paper</strong>: <u>link</u> </a></li>
 
               </ul>
@@ -136,10 +136,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/cleanfolio-minimal"
+        href="#"
         class="link footer__link"
       >
-        Created By Ctrl C & Ctrl V
+        I hereby consent to the processing of the data I provided in this Portfolio.
       </a>
     </footer>
 
