--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/GerardoIuliano.github.io"
+        href="#"
         class="link footer__link"
       >
         I hereby consent to the processing of the data I provided in this Portfolio.
