--- a/salernoamica.html
+++ b/salernoamica.html
@@ -75,7 +75,7 @@
                 <li><strong>Category</strong>: Cross Platform Application</li>
                 <li><strong>Client</strong>: University</li>
                 <li><strong>Project date</strong>: 16 Feb, 2023</li>
-                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/SalernoAmica"><strong>GitHub</strong>: github.com/GerardoIuliano/SalernoAmica </a></li>
+                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/SalernoAmica"><strong>GitHub</strong>:<u>github.com/GerardoIuliano/SalernoAmica</u> </a></li>
               </ul>
             </div>
           </div>
@@ -100,10 +100,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/cleanfolio-minimal"
+        href="#"
         class="link footer__link"
       >
-        Created By Ctrl C & Ctrl V
+        I hereby consent to the processing of the data I provided in this Portfolio.
       </a>
     </footer>
 
