--- a/greenstar.html
+++ b/greenstar.html
@@ -74,7 +74,7 @@
                 <li><strong>Category</strong>: Android Application</li>
                 <li><strong>Client</strong>: University</li>
                 <li><strong>Project date</strong>: Jun 2021</li>
-                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/GreenStars"><strong>GitHub</strong>: github.com/GerardoIuliano/GreenStar </a></li>
+                <li> <a class="nav-link scrollto" href="https://github.com/GerardoIuliano/GreenStars"><strong>GitHub</strong>: <u>github.com/GerardoIuliano/GreenStar</u> </a></li>
               </ul>
             </div>
           </div>
@@ -95,10 +95,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/gerardoiuliano/cleanfolio-minimal"
+        href="#"
         class="link footer__link"
       >
-        Created By Ctrl C & Ctrl V
+        I hereby consent to the processing of the data I provided in this Portfolio.
       </a>
     </footer>
 
