add link to paper

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
+            <a class="link link--nav" href="#education">Education</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#publications">Publications</a>
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#projects">Projects</a>
           </li>
           <li class="nav__list-item">
@@ -156,7 +162,7 @@
 
       <!-- Publication -->
 
-      <h2 class="section__title">Publication</h2>
+      <h2 id="publications" class="section__title">Publication</h2>
 
       <section class="timeline">
 
@@ -165,8 +171,8 @@
             <h4>Toward a Search-Based Approach to Support the Design of Security Tests for Malicious Network Traffic</h4>
             <p>D. La Gamba, <b>G. Iuliano</b>, G. Recupito, G. Giordano, F. Ferrucci, D. Di Nucci, F. Palomba</p>
             <span class="date">April 2024 - SECUTE 2024 - EASE 2024</span>
-            <a href="assets/pdf/BachelorThesis.pdf" class="link--icon"> 
-              <h6>Read more</h6>
+            <a href="assets/publications/Toward_a_Search_Based_Approach_to_Support_the_Design_of_Security_Tests_for_Malicious_Network_Traffic.pdf" class="link--icon"> 
+              <h6><u>Read more</u></h6>
             </a>            
           </div>
         </div>
