--- a/compiler.html
+++ b/compiler.html
@@ -15,18 +15,25 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="assets/img/compiler.png">
+
     <title>Compiler</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://gerardoiuliano.github.io" class="link"
-          >Geri</a
+        <a href="https://gerardoiuliano.github.io" class="link">Geri</a
         >
       </h3>
 
       <nav class="nav center">
         <ul class="nav__list center">
+          <li class="nav__list-item">
+            <a class="link link--nav" href="index.html#education">Education</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="index.html#publications">Publications</a>
+          </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="index.html#projects">Projects</a>
           </li>
