--- a/sorrentomarina.html
+++ b/sorrentomarina.html
@@ -15,6 +15,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="assets/img/sorrentoMarina.png">
+
     <title>Sorrento Marina</title>
   </head>
   <body class="light" id="top">
@@ -27,6 +29,12 @@
 
       <nav class="nav center">
         <ul class="nav__list center">
+          <li class="nav__list-item">
+            <a class="link link--nav" href="index.html#education">Education</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="index.html#publications">Publications</a>
+          </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="index.html#projects">Projects</a>
           </li>
