--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ></script>
     
     <link rel="stylesheet" href="styles2.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="timeline.css">
     <link rel="icon" type="image/x-icon" href="assets/img/G.png">
     <title>Geri</title>
