Update SLR info

--- a/slr.html
+++ b/slr.html
@@ -82,16 +82,16 @@ This paper presents a systematic literature review that explores vulnerabilities
               href="assets/pdf/papers.pdf"
               class="link">Papers</a>   
               <a
-              href="assets/pdf/taxonomy.pdf"
+              href="assets/csv/RQ1_Taxonomy.xlsx"
               class="link">Taxonomy</a>
               <a
-              href="assets/pdf/tool.pdf"
+              href="assets/csv/RQ2_Tools.xlsx"
               class="link">Tools</a>
               <a
-              href="assets/pdf/mapping.pdf"
+              href="assets/csv/RQ3_Mapping.xlsx"
               class="link">Mapping</a>
               <a
-              href="assets/pdf/benchmarks.pdf"
+              href="assets/csv/RQ4_Benchmarks.xlsx"
               class="link">Benchmarks</a>
 
             </div>
